--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -14,13 +14,16 @@
     flex-direction: column;
   }
 
-  aside.sidebar nav {
+  aside.sidebar nav > ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
     display: flex;
     flex-direction: column;
     gap: var(--space-1);
   }
 
-  aside.sidebar a {
+  aside.sidebar nav li > a {
     display: flex;
     justify-content: flex-start;
     gap: var(--space-2);
@@ -48,14 +51,18 @@
       border-bottom: none;
     }
 
-    & > *:not(summary) {
+    & > ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
       display: flex;
       flex-direction: column;
       gap: var(--space-1);
       padding: var(--space-1) 0;
+      margin-left: var(--space-6);
     }
 
-    & a {
+    & li > a {
       padding-inline-start: calc(var(--space-3) + 1rem + var(--space-2));
 
       &:hover {
